# twd_control_2021

./: CMakeLists.txt  README.md  package.xml
cfg/: MotorSpeedController.cfg
config/: amcl.yaml  gmapping.yaml  laser_line_extraction.yaml  path_following_controller.yaml  path_generator.yaml  scan_filter_front.yaml  scan_filter_rear.yaml  twd_robot_state_publisher.yaml
config/move_base/towing/: base_local_planner.yaml  costmap_common.yaml  global_costmap.yaml  local_costmap.yaml  move_base.yaml
launch/: gmapping.launch  manual_control.launch  navigation.launch  path_following.launch
map/corridor/: corridor.pgm  corridor.yaml
msg/: MotorSpeedControllerFeedback.msg  MotorSpeedControllerParam.msg
robots/: twd_robot_single.urdf  twd_robot_towing.urdf
rviz/: manual_control.rviz  navigation.rviz  path_following.rviz
src/: manual_controller.cpp  twd_robot_state_publisher.cpp
