<?xml version="1.0"?>
<package format="2">
  <name>twd_control_2021</name>
  <version>1.0.0</version>
  <description>Two-Wheel-Drive Robot Control</description>
  <maintainer email="msakamoto@nitnc.net">Mitsuhiro Sakamoto</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>dynamic_reconfigure</depend>
  <depend>geometry_msgs</depend>
  <depend>message_generation</depend>
  <depend>nav_msgs</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>agv_control_msgs</depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>navigation</exec_depend>
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>rosserial</exec_depend>
  <exec_depend>rosserial_arduino</exec_depend>
  <exec_depend>teb_local_planner</exec_depend>
  <exec_depend>urg_node</exec_depend>
  <exec_depend>agv_navigation</exec_depend>
  <exec_depend>towable_local_planner</exec_depend>
</package>
